Added PI detection

--- a/web_sample/templates/base.html
+++ b/web_sample/templates/base.html
@@ -38,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/named_entity_recognition">Named Entity Recognition</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/pii_detection">PII Detection</a>
+                    </li>
                 </ul>
             </div>
         </nav>
