--- a/web_sample/templates/key_phrase_extraction.html
+++ b/web_sample/templates/key_phrase_extraction.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Entity Linking{% endblock %}
+{% block title %}Key Phrase Extraction{% endblock %}
 {% block head %}
 {{ super() }}
 {% endblock %}
