Adding sentiment analysis

--- a/web_sample/templates/key_phrase_extraction.html
+++ b/web_sample/templates/key_phrase_extraction.html
@@ -18,8 +18,8 @@
                     <form method="post">
                         <div class="container">
                             <div class="row p-1">
-                                <textarea id="documentEntry" name="documentEntry" rows="24"
-                                    placeholder="Paste the document to sumarize here">{{ data.document }}</textarea>
+                                <textarea id="documentEntry" name="documentEntry" rows="12"
+                                    placeholder="Paste the document to detect key phrases for here">{{ data.document }}</textarea>
                                 <div id="the-count">
                                     <span>{{data.documentCount}}</span>
                                 </div>
