--- a/web_sample/templates/base.html
+++ b/web_sample/templates/base.html
@@ -41,6 +41,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/pii_detection">PII Detection</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sentiment_analysis">Sentiment Analysis</a>
+                    </li>
+                    
                 </ul>
             </div>
         </nav>
