--- a/web_sample/templates/named_entity_recognition.html
+++ b/web_sample/templates/named_entity_recognition.html
@@ -31,10 +31,10 @@
                             <div class="row p-1 pt-4">
                                 <h4>Entities</h4>
                             </div>
-                            <div class="row p-2 justify-content-center">
+                            <div class="row p-2 justify-content-start">
                                 {% for entity in data.entities %}
-                                <div class="col m-1 mt-3">
-                                    <div class="card h-100" style="width: 18rem;">
+                                <div class="col-4 m-1 mt-3">
+                                    <div class="card h-100">
                                         <div class="card-body">
                                             <h4 class="card-title text-center">{{entity.name}}</h4>
                                             <p class="card-text">Category: {{entity.category}}</p>
