--- a/web_sample/templates/key_phrase_extraction.html
+++ b/web_sample/templates/key_phrase_extraction.html
@@ -31,10 +31,10 @@
                             <div class="row p-1 pt-4">
                                 <h4>Key phrases</h4>
                             </div>
-                            <div class="row p-2 justify-content-center">
+                            <div class="row p-2 justify-content-start">
                                 {% for key_phrase in data.key_phrases %}
-                                <div class="col m-1 mt-3">
-                                    <div class="card h-100" style="width: 18rem;">
+                                <div class="col-4 m-1 mt-3">
+                                    <div class="card h-100">
                                         <div class="card-body">
                                             <h4 class="card-title text-center">{{key_phrase}}</h4>
                                         </div>
